Bug 1006307 - Fix -Wuninitialized and -Wunused-variable warnings in widget/xpwidgets/GfxInfoBase.cpp. r=bjacob, a=sledru